[tool.poetry]
name = "cpanel-api"
version = "0.1.2"
description = "CPanel API Client. Supports latest UAPI."
homepage = "https://github.com/tz4678/cpanel-api"
readme = "README.md"
authors = ["Sergey M <tz4678@gmail.com>"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
