[tool.poetry]
name = "cpanel-api"
version = "0.3.0"
description = "CPanel API Client. Supports cPanel API 2 and UAPI."
homepage = "https://github.com/tz4678/cpanel-api"
readme = "README.md"
authors = ["Sergey M <tz4678@gmail.com>"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pysocks = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
